Update logo in the navbar

--- a/html/facts.html
+++ b/html/facts.html
@@ -15,7 +15,9 @@
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html"><img src="https://d1yn1kh78jj1rr.cloudfront.net/preview/cloud-icon_fkQZ0V_u_M.jpg" alt="SocialUp logo"></a>
+            <a class="navbar-brand" href="index.html">
+              <object id="cloud-logo" type="image/svg+xml" data="../assets/icons/cloud.svg" width="40"></object>
+            </a>
           </div>
           <ul class="nav navbar-nav">
             <li class=""><a href="index.html">Home</a></li>
