--- a/html/index.html
+++ b/html/index.html
@@ -11,6 +11,79 @@
     <title>SocialUp</title>
   </head>
   <body>
+    <nav class="navbar navbar-default navbar-custom">
+      <div class="container-fluid">
+        <ul class="nav navbar-nav navbar-right">
+          <li><a href="#">Hello James <span class="glyphicon glyphicon-user"></span></a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="container-fluid">
+    <div class="row top-buffer-large">
+      <div class="col-xs-12 col-xs-offset-1" id="feelings-title">
+        <h2>What's your mood like right now?</h2>
+      </div>
+    </div>
+    <div class="row top-buffer">
+      <div class="dropdown col-xs-offset-2" id="feelings-dropdown">
+        <button class="btn btn-primary dropdown-toggle" id="dropdown-custom" type="button" data-toggle="dropdown">confused
+        <span class="caret"></span></button>
+        <ul class="dropdown-menu">
+          <li><a href="#">confused</a></li>
+          <li><a href="#">angry</a></li>
+          <li><a href="#">sad</a></li>
+          <li><a href="#">anxious</a></li>
+          <li><a href="#">jealous</a></li>
+          <li><a href="#">irritated</a></li>
+          <li><a href="#">numb</a></li>
+          <li><a href="#">lonely</a></li>
+          <li><a href="#">irritated</a></li>
+          <li><a href="#">rejected</a></li>
+          <li><a href="#">stressed</a></li>
+          <li><a href="#">uncomfortable</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-xs-12 col-xs-offset-6" id="feelings-strength-title">
+        <h2>How strong are your feelings?</h2>
+      </div>
+    </div>
+    <div class="row top-buffer">
+      <div class="dropdown col-xs-offset-7" id="feelings-strength-dropdown">
+        <button class="btn btn-primary dropdown-toggle" id="dropdown-custom" type="button" data-toggle="dropdown">subtle
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+          <li><a href="#">subtle</a></li>
+          <li><a href="#">medium</a></li>
+          <li><a href="#">strong</a></li>
+          <li><a href="#">very strong</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row negative-buffer">
+      <div class="col-xs-10 col-xs-offset-2">
+        <h2 id="welcome-msg-1"></h2>
+      </div>
+    </div>
+    <div class="row negative-buffer">
+      <div class="col-xs-10 col-xs-offset-5">
+        <h2 id="welcome-msg-2">They're not.</h2>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-3 col-xs-offset-2 top-buffer" id="panel-facts">
+      <h4>Check out some facts about thoughts and emotions</h4>
+    </div>
+    <div class="col-xs-3 top-buffer" id="panel-exercises">
+      <h4>Try some exercises to challenge your thinking patterns</h4>
+    </div>
+    <div class="col-xs-3 top-buffer" id="panel-testimonials">
+      <h4>See what other people found helpful</h4>
+    </div>
+  </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
     <script src="../js/app.js"></script>
