--- a/html/exercises.html
+++ b/html/exercises.html
@@ -11,6 +11,50 @@
     <title>SocialUp</title>
   </head>
   <body>
+    <header class="container-fluid">
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">
+              <object id="cloud-logo" type="image/svg+xml" data="../assets/icons/cloud.svg" width="40"></object>
+            </a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class=""><a href="index.html">Home</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="facts.html">Facts</a></li>
+            <li><a href="exercises.html">Exercises</a></li>
+            <li><a href="testimonials.html">Testimonials</a></li>
+          </ul>
+        </div>
+      </nav>
+      </header>
+        <div class="container-fluid" id="exercises-content">
+        <div class="row">
+          <div class="col-xs-5 col-xs-offset-1">
+            <h2>Pick your challenge!</h2>
+            <img src="../assets/images/monster-path.png" alt="" id="monster-path">
+          </div>
+          <div class="col-xs-5">
+            <h2>Exercise 1: Core beliefs</h2>
+            <p>Everyone looks at the world differently. Two people can have the same experience, yet have very different interpretations of what happened.</p>
+            <img src="../assets/images/glasses.png" alt="" id="glasses-image">
+            <p id="glasses-caption">Think of core beliefs like a pair of sunglasses. Everyone has a different ‘shade’ that causes them to see things differently.</p>
+            <p></p>
+            <h2 id="beliefs-exercise">Exploring your core beliefs</h2>
+            <p>To begin challenging your negative core beliefs, you first need to identify what they are. Some common examples are: ‘I’m not good enough’, I’m stupid’, ‘I’m unlovable’ and ‘I’m undeserving’.</p>
+            <ol id="beliefs-list">
+              <li>What is one of your negative core beliefs?</li>
+              <li>Write down any emotions that you have about your core belief.</li>
+              <li>List three pieces of evidence contrary to your negative core belief.</li>
+              <li>Write down your emotions again; have any of them changed?</li>
+            </ol>
+            <button class="btn btn-primary" id="button-share" type="button">share your thoughts</button>
+            <button class="btn btn-primary" id="button-next" type="button">next exercise</button>
+          </div>
+        </div>
+        </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
     <script src="../js/app.js"></script>
