--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -10,7 +10,77 @@
     <link href="../styles/main.css" type="text/css" rel="stylesheet">
     <title>SocialUp</title>
   </head>
-  <body>
+  <body id="testimonials-bg">
+    <header class="container-fluid">
+      <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <a class="navbar-brand" href="index.html">
+              <object id="cloud-logo" type="image/svg+xml" data="../assets/icons/cloud.svg" width="40"></object>
+            </a>
+          </div>
+          <ul class="nav navbar-nav">
+            <li class=""><a href="index.html">Home</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="facts.html">Facts</a></li>
+            <li><a href="exercises.html">Exercises</a></li>
+            <li><a href="testimonials.html">Testimonials</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <div id="testimonials-content">
+      <canvas id="canvas"></canvas>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="sticky-note col-xs-4" id="sticky-note-1">
+            <div class="testimonial-note sticky-orange">
+              <img class="testimonial-note__pin" src="../assets/icons/pin-black.png" alt="Pin icon">
+              <p class="testimonial-text">I felt better after writing down my thoughts for exercise 4. It's not all black or white - there is grey too :)</p>
+              <span class="testimonial-emotions testimonial-emotions--joy"></span>
+            </div>
+          </div>
+          <div class="sticky-note col-xs-4" id="sticky-note-2">
+            <div class="testimonial-note sticky-blue">
+              <img class="testimonial-note__pin" src="../assets/icons/pin-black.png" alt="Pin icon">
+              <p class="testimonial-text">I just put the laptop away and feel asleep.  I am so angry with myself!</p>
+              <span class="testimonial-emotions testimonial-emotions--anger"></span>
+            </div>
+          </div>
+          <div class="sticky-note col-xs-4"  id="sticky-note-3">
+            <div class="testimonial-note sticky-green">
+              <img class="testimonial-note__pin" src="../assets/icons/pin-black.png" alt="Pin icon">
+              <p class="testimonial-text">Relieved that other people feel like me. But I found some of the exercises a bit scary. </p>
+              <span class="testimonial-emotions testimonial-emotions--fear"></span>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="sticky-note col-xs-4"  id="sticky-note-4">
+            <div class="testimonial-note sticky-purple">
+              <img class="testimonial-note__pin" src="../assets/icons/pin-black.png" alt="Pin icon">
+              <p class="testimonial-text">Some of the facts really surprised me!Self-esteem is not related with attractiveness apparently...</p>
+              <span class="testimonial-emotions testimonial-emotions--disgust"></span>
+            </div>
+          </div>
+          <div class="sticky-note col-xs-4"  id="sticky-note-5">
+            <div class="testimonial-note sticky-orange">
+              <img class="testimonial-note__pin" src="../assets/icons/pin-black.png" alt="Pin icon">
+              <p class="testimonial-text">Nothing helped me - still feel confused. </p>
+              <span class="testimonial-emotions testimonial-emotions--sadness"></span>
+            </div>
+          </div>
+          <div class="sticky-note col-xs-4"  id="sticky-note-6">
+            <div class="testimonial-note sticky-blue">
+              <img class="testimonial-note__pin" src="../assets/icons/pin-black.png" alt="Pin icon">
+              <p class="testimonial-text">I listened to a helpful track - you don't need to be perfect to be happy. You have the power to be anything you choose to be.</p>
+              <span class="testimonial-emotions testimonial-emotions--joy"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
     <script src="../js/app.js"></script>
