Update links in all html files
related to #37

--- a/html/testimonials.html
+++ b/html/testimonials.html
@@ -15,12 +15,12 @@
       <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="../index.html">
               <object id="cloud-logo" type="image/svg+xml" data="../assets/icons/cloud.svg" width="40"></object>
             </a>
           </div>
           <ul class="nav navbar-nav">
-            <li class=""><a href="index.html">Home</a></li>
+            <li class=""><a href="../index.html">Home</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="facts.html">Facts</a></li>
