Add classes to control heading styles

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="container-fluid">
     <div class="row top-buffer-large">
       <div class="col-xs-6 col-xs-offset-1" id="feelings-title">
-        <h2>What's your mood like right now?</h2>
+        <h2 class="landing-heading">What's your mood like right now?</h2>
       </div>
     </div>
     <div class="row top-buffer">
@@ -51,7 +51,7 @@
     </div>
     <div class="row">
       <div class="col-xs-6 col-xs-offset-6" id="feelings-strength-title">
-        <h2>How strong are your feelings?</h2>
+        <h2 class="landing-heading">How strong are your feelings?</h2>
       </div>
     </div>
     <div class="row top-buffer">
@@ -69,24 +69,24 @@
     </div>
     <div class="row negative-buffer">
       <div class="col-xs-10 col-xs-offset-2">
-        <h2 id="welcome-msg-1"></h2>
+        <h2 class="landing-heading" id="welcome-msg-1"></h2>
       </div>
     </div>
     <div class="row negative-buffer">
       <div class="col-xs-12">
-        <h2 id="welcome-msg-2">They're not.</h2>
+        <h2 class="landing-heading" id="welcome-msg-2">They're not.</h2>
       </div>
     </div>
   </div>
   <div class="row" id="panel-options">
     <div class="col-xs-3 col-xs-offset-2 top-buffer" id="panel-facts">
-      <a href="./html/facts.html"><h4>Check out some facts about thoughts and emotions</h4></a>
+      <a href="./html/facts.html"><h4 class="landing-heading">Check out some facts about thoughts and emotions</h4></a>
     </div>
     <div class="col-xs-3 top-buffer" id="panel-exercises">
-      <a href="./html/exercises.html"><h4>Try some exercises to challenge your thinking patterns</h4></a>
+      <a href="./html/exercises.html"><h4 class="landing-heading">Try some exercises to challenge your thinking patterns</h4></a>
     </div>
     <div class="col-xs-3 top-buffer" id="panel-testimonials">
-      <a href="./html/testimonials.html"><h4>See what other people found helpful</h4></a>
+      <a href="./html/testimonials.html"><h4 class="landing-heading">See what other people found helpful</h4></a>
     </div>
   </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
