--- a/html/exercises.html
+++ b/html/exercises.html
@@ -33,16 +33,16 @@
         <div class="container-fluid" id="exercises-content">
         <div class="row">
           <div class="col-xs-5 col-xs-offset-1">
-            <h2>Pick your challenge!</h2>
+            <h2 class="heading">Pick your challenge!</h2>
             <img src="../assets/images/monster-path.png" alt="" id="monster-path">
           </div>
           <div class="col-xs-5">
-            <h2>Exercise 1: Core beliefs</h2>
+            <h2 class="heading">Exercise 1: Core beliefs</h2>
             <p>Everyone looks at the world differently. Two people can have the same experience, yet have very different interpretations of what happened.</p>
             <img src="../assets/images/glasses.png" alt="" id="glasses-image">
             <p id="glasses-caption">Think of core beliefs like a pair of sunglasses. Everyone has a different ‘shade’ that causes them to see things differently.</p>
             <p></p>
-            <h2 id="beliefs-exercise">Exploring your core beliefs</h2>
+            <h2 class="heading" id="beliefs-exercise">Exploring your core beliefs</h2>
             <p>To begin challenging your negative core beliefs, you first need to identify what they are. Some common examples are: ‘I’m not good enough’, I’m stupid’, ‘I’m unlovable’ and ‘I’m undeserving’.</p>
             <ol id="beliefs-list">
               <li>What is one of your negative core beliefs?</li>
