--- a/html/facts.html
+++ b/html/facts.html
@@ -33,34 +33,35 @@
     <div class="container" id="facts-content">
       <div class="row">
         <section id="intro" class="col-xs-6">
-          <h1 class="intro__heading heading">How our minds are dealing with self-esteem?</h1>
+          <h1 class="intro__heading heading">What's self-esteem all about?</h1>
           <!-- 16:9 aspect ratio -->
           <div class="embed-responsive embed-responsive-16by9">
             <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wC9S_fFMnaU"></iframe>
           </div>
           <h2 class="resources__heading heading">More resources</h2>
           <ul id="resources" class="list-group">
-            <li class="resources__list-item list-group-item"><i class="glyphicon glyphicon-headphones"></i> Raise your self-esteem following a guided track.</li>
-            <li class="resources__list-item list-group-item"><i class="glyphicon glyphicon-book"></i> Read a book on how to turn negative thoughts to positive feelings.</li>
-            <li class="resources__list-item list-group-item"><i class="glyphicon glyphicon-film"></i> Watch a video to remind yourself you don't have to be perfect at it to enjoy yourself.</li>
-            <li class="resources__list-item list-group-item"><i class="glyphicon glyphicon-book"></i> Check an article on negative thinking patterns and how to break limiting beliefs. </li>
+            <li class="resources__list-item list-group-item"><i class="resources-icon glyphicon glyphicon-book"></i> Read a book about positive thinking patterns.</li>
+            <li class="resources__list-item list-group-item"><i class="resources-icon glyphicon glyphicon-headphones"></i> Listen to a guided track and write down your thoughts.</li>
+            <li class="resources__list-item list-group-item"><i class="resources-icon glyphicon glyphicon-film"></i> What is Cognitive Behavioural Therapy - watch an intro video.</li>
+            <li class="resources__list-item list-group-item"><i class="resources-icon glyphicon glyphicon-book"></i> Check an article on how to break limiting beliefs. </li>
           </ul>
         </section>
         <section id="fact-sheet" class="col-xs-5 col-xs-offset-1">
           <h1 class="fact-sheet__heading heading">Did you know?</h1>
           <img class="fact-sheet__pin" src="../assets/icons/pin-orange.png" alt="Pin icon">
           <ul class="fact-sheet__list list-group">
-            <li class="fact-sheet__list-item list-group-item"><i class=" glyphicon glyphicon-leaf"></i> Our self-esteem fluctuates day to day and hour to hour.</li>
-            <li class="fact-sheet__list-item list-group-item"><i class=" glyphicon glyphicon-leaf"></i> Self-esteem is unrelated to physical attractiveness.</li>
-            <li class="fact-sheet__list-item list-group-item"><i class=" glyphicon glyphicon-leaf"></i> People with low self-esteem are resistant to positive feedback. </li>
-            <li class="fact-sheet__list-item list-group-item"><i class=" glyphicon glyphicon-leaf"></i> Talking to others with similar feelings and experiences can help you to accept yourself.  </li>
-            <li class="fact-sheet__list-item list-group-item"><i class=" glyphicon glyphicon-leaf"></i> Our mental and physical health are closely linked. Taking up sport or exercise can help you feel better in lots of different ways.</li>
-            <li class="fact-sheet__list-item list-group-item"><i class=" glyphicon glyphicon-leaf"></i> Getting too little or too much sleep can have a big impact on how you feel.</li>
+            <li class="fact-sheet__list-item list-group-item"><i class="facts-icon glyphicon glyphicon-leaf"></i> Our self-esteem fluctuates day to day and hour to hour.</li>
+            <li class="fact-sheet__list-item list-group-item"><i class="facts-icon glyphicon glyphicon-leaf"></i> Self-esteem is unrelated to physical attractiveness.</li>
+            <li class="fact-sheet__list-item list-group-item"><i class="facts-icon glyphicon glyphicon-leaf"></i> People with low self-esteem are resistant to positive feedback. </li>
+            <li class="fact-sheet__list-item list-group-item"><i class="facts-icon glyphicon glyphicon-leaf"></i> Talking to others with similar feelings and experiences can help you to accept yourself.  </li>
+            <li class="fact-sheet__list-item list-group-item"><i class="facts-icon glyphicon glyphicon-leaf"></i> Our mental and physical health are closely linked. Taking up sport or exercise can help you feel better in lots of different ways.</li>
+            <li class="fact-sheet__list-item list-group-item"><i class="facts-icon glyphicon glyphicon-leaf"></i> Getting too little or too much sleep can have a big impact on how you feel.</li>
           </ul>
         </section>
       </div>
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js'></script>
+    <script src='../js/facts.js'></script>
   </body>
 </html>
